--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.2.5/schema.json",
 	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"linter": {
 		"enabled": true,
@@ -35,7 +35,7 @@
 		}
 	},
 	"files": {
-		"includes": ["**"]
+		"includes": ["**", "!security-audit.json"]
 	},
 	"vcs": {
 		"enabled": true,
