--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
       pull-requests: write
     timeout-minutes: 10
     concurrency:
-      group: ${{ github.workflow }}-lint-${{ github.ref }}
+      group: ${{ github.workflow }}-biome-${{ github.ref }}
     steps:
       - name: Checkout files
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
@@ -89,7 +89,7 @@ jobs:
       pull-requests: write
     timeout-minutes: 10
     concurrency:
-      group: ${{ github.workflow }}-lint-${{ github.ref }}
+      group: ${{ github.workflow }}-eslint-${{ github.ref }}
     steps:
       - name: Checkout files
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
@@ -121,7 +121,7 @@ jobs:
       pull-requests: write
     timeout-minutes: 10
     concurrency:
-      group: ${{ github.workflow }}-lint-${{ github.ref }}
+      group: ${{ github.workflow }}-knip-${{ github.ref }}
     steps:
       - name: Checkout files
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
