--- a/packages/domains/tsconfig.json
+++ b/packages/domains/tsconfig.json
@@ -6,7 +6,12 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
+		"noEmit": false,
+		"declaration": true,
+		"declarationMap": true,
+		"sourceMap": true,
+		"outDir": "./dist",
+		"rootDir": "./",
 		"esModuleInterop": true,
 		"module": "esnext",
 		"moduleResolution": "bundler",
@@ -14,5 +19,14 @@
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"incremental": true
-	}
+	},
+	"include": ["**/*.ts"],
+	"exclude": [
+		"node_modules",
+		"dist",
+		"**/*.test.ts",
+		"**/*.spec.ts",
+		"vitest-setup.tsx",
+		"vitest.config.ts"
+	]
 }
