--- a/app/package.json
+++ b/app/package.json
@@ -8,15 +8,9 @@
 		"dev": "next dev",
 		"build": "next build",
 		"analyze": "ANALYZE=true pnpm build",
-		"start": "next start",
-		"prisma:generate": "prisma generate --no-engine",
-		"prisma:migrate": "prisma migrate dev",
-		"prisma:deploy": "prisma migrate deploy",
-		"prisma:studio": "prisma studio",
-		"postinstall": "pnpm prisma:generate"
+		"start": "next start"
 	},
 	"dependencies": {
-		"@prisma/client": "6.19.0",
 		"@prisma/extension-accelerate": "3.0.0",
 		"@sentry/nextjs": "10.27.0",
 		"@t3-oss/env-nextjs": "0.13.8",
@@ -30,11 +24,11 @@
 		"next-intl": "4.5.5",
 		"next-themes": "0.4.6",
 		"pino": "10.1.0",
-		"prisma": "6.19.0",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
 		"react-markdown": "10.1.0",
 		"s-private-components": "workspace:*",
+		"s-private-database": "workspace:*",
 		"s-private-domains": "workspace:*",
 		"server-only": "0.0.1",
 		"sharp": "0.34.5",
