--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -15,9 +15,10 @@ WORKDIR /app
 
 # Copy only package.json, pnpm-lock.yaml, and prisma schema for installing dependencies
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY app/prisma/ ./app/prisma/
+COPY packages/database/prisma/ ./packages/database/prisma/
 COPY app/package.json ./app/package.json
 COPY packages/components/package.json ./packages/components/package.json
+COPY packages/database/package.json ./packages/database/package.json
 COPY packages/domains/package.json ./packages/domains/package.json
 
 # Install dependencies
@@ -29,6 +30,8 @@ WORKDIR /app
 COPY --from=deps /app/node_modules/ ./node_modules/
 COPY --from=deps /app/app/node_modules/ ./app/node_modules/
 COPY --from=deps /app/packages/components/node_modules/ ./packages/components/node_modules/
+COPY --from=deps /app/packages/database/node_modules/ ./packages/database/node_modules/
+COPY --from=deps /app/packages/database/src/generated/ ./packages/database/src/generated/
 COPY --from=deps /app/packages/domains/node_modules/ ./packages/domains/node_modules/
 
 # Copy rest of the application code
@@ -73,9 +76,7 @@ DATABASE_URL=$(cat /run/secrets/DATABASE_URL)\n\
 SENTRY_AUTH_TOKEN=$(cat /run/secrets/SENTRY_AUTH_TOKEN)\n\
 SENTRY_REPORT_URL=$(cat /run/secrets/SENTRY_REPORT_URL)\n" > app/.env
 
-RUN pnpm --filter s-private-app prisma:generate
-
-# Build the application
+# Build the application (prisma:generate runs automatically via postinstall)
 RUN pnpm run build
 
 # Production image, copy all the files and run Next.js
