--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,13 +1,38 @@
 {
-	"name": "s-private-database",
-	"version": "1.0.0",
+	"name": "s-database",
+	"version": "0.1.0",
 	"description": "Prisma database schema and client for s-private project",
 	"type": "module",
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"exports": {
-		".": "./src/index.ts",
+		".": {
+			"types": "./src/index.ts",
+			"default": "./src/index.ts"
+		},
 		"./generated": "./src/generated/index.js",
 		"./generated/*": "./src/generated/*"
 	},
+	"publishConfig": {
+		"access": "public",
+		"exports": {
+			".": {
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
+			},
+			"./generated": "./src/generated/index.js",
+			"./generated/*": "./src/generated/*"
+		},
+		"main": "./dist/index.js",
+		"types": "./dist/index.d.ts"
+	},
+	"files": [
+		"dist",
+		"src/generated",
+		"prisma",
+		"README.md",
+		"LICENSE"
+	],
 	"scripts": {
 		"prisma:generate": "prisma generate --no-engine",
 		"prisma:migrate": "prisma migrate dev",
@@ -15,8 +40,15 @@
 		"prisma:studio": "prisma studio",
 		"build": "tsc",
 		"postinstall": "pnpm prisma:generate",
-		"prepublishOnly": "pnpm prisma:generate"
+		"prepublishOnly": "pnpm prisma:generate && pnpm run build",
+		"clean": "rm -rf dist"
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/s-hirano-ist/s-private.git",
+		"directory": "packages/database"
+	},
+	"license": "AGPL-3.0",
 	"dependencies": {
 		"@prisma/client": "6.19.0",
 		"@prisma/extension-accelerate": "3.0.0"
