--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -6,12 +6,19 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
+		"noEmit": false,
+		"declaration": true,
+		"declarationMap": true,
+		"sourceMap": true,
+		"outDir": "./dist",
+		"rootDir": "./src",
 		"esModuleInterop": true,
 		"module": "esnext",
 		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"incremental": true
-	}
+	},
+	"include": ["src/**/*.ts"],
+	"exclude": ["node_modules", "dist", "src/generated"]
 }
