--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,23 +6,29 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
+		"noEmit": false,
+		"declaration": true,
+		"declarationMap": true,
+		"sourceMap": true,
+		"outDir": "./dist",
+		"rootDir": "./",
 		"esModuleInterop": true,
 		"module": "esnext",
 		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"jsx": "preserve",
+		"jsx": "react-jsx",
 		"incremental": true,
-		"plugins": [{ "name": "next" }],
-		"paths": { "@/*": ["./src/*"] }
+		"plugins": [{ "name": "next" }]
 	},
-	"include": [
-		"next-env.d.ts",
-		"**/*.ts",
-		"**/*.tsx",
-		".next/types/**/*.ts",
+	"include": ["**/*.ts", "**/*.tsx"],
+	"exclude": [
+		"node_modules",
+		"dist",
+		"**/*.stories.tsx",
+		"**/*.test.tsx",
+		"**/*.test.ts",
+		"vitest-setup.tsx",
 		"vitest.config.ts"
-	],
-	"exclude": ["node_modules"]
+	]
 }
