--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -6,19 +6,13 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
-		"noEmit": false,
-		"declaration": true,
-		"declarationMap": true,
-		"sourceMap": true,
-		"outDir": "./dist",
-		"rootDir": "./src",
+		"noEmit": true,
 		"esModuleInterop": true,
 		"module": "esnext",
 		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"incremental": true
+		"isolatedModules": true
 	},
-	"include": ["src/**/*.ts"],
+	"include": ["src/index.ts"],
 	"exclude": ["node_modules", "dist", "src/generated"]
 }
