--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -12,7 +12,7 @@
 		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"jsx": "preserve",
+		"jsx": "react-jsx",
 		"incremental": true,
 		"plugins": [{ "name": "next" }],
 		"paths": {
@@ -28,7 +28,8 @@
 		".next/types/**/*.ts",
 		"vitest.config.ts",
 		".storybook/**/*.ts",
-		".storybook/**/*.tsx"
+		".storybook/**/*.tsx",
+		".next/dev/types/**/*.ts"
 	],
 	"exclude": ["node_modules"]
 }
