chore: add dotenv and dev dep

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -52,6 +52,7 @@
 		"@prisma/extension-accelerate": "3.0.0"
 	},
 	"devDependencies": {
+		"dotenv": "17.2.3",
 		"prisma": "7.1.0",
 		"typescript": "5.9.3"
 	}
