--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -95,6 +95,7 @@
 		"vaul": "1.1.2"
 	},
 	"devDependencies": {
+		"@storybook/nextjs-vite": "10.1.10",
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
 		"@types/react-syntax-highlighter": "15.5.13",
