--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 			"@s-hirano-ist/s-ui/*": ["packages/ui/*"],
 			"@s-hirano-ist/s-core/*": ["packages/core/*"]
 		},
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"jsx": "react-jsx"
 	},
 	"include": ["app/src/**/*", "packages/*/src/**/*", "packages/*/**/*"],
 	"exclude": ["node_modules", ".next", "**/node_modules"]
