chore: add typecheck

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,7 +42,8 @@
 	"scripts": {
 		"build": "tsc",
 		"prepublishOnly": "pnpm run build",
-		"clean": "rm -rf dist"
+		"clean": "rm -rf dist",
+		"typecheck": "tsc --noEmit"
 	},
 	"keywords": [
 		"domain-driven-design",
