--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -68,7 +68,8 @@
 	"scripts": {
 		"build": "tsc",
 		"prepublishOnly": "pnpm run build",
-		"clean": "rm -rf dist"
+		"clean": "rm -rf dist",
+		"typecheck": "tsc --noEmit"
 	},
 	"repository": {
 		"type": "git",
