--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
 		"@prisma/extension-accelerate": "3.0.0",
 		"@s-hirano-ist/s-core": "workspace:*",
 		"@s-hirano-ist/s-database": "workspace:*",
+		"@s-hirano-ist/s-notification": "workspace:*",
 		"@s-hirano-ist/s-ui": "workspace:*",
 		"@sentry/nextjs": "10.30.0",
 		"@t3-oss/env-nextjs": "0.13.10",
