--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
 		"test:app": "vitest run --project app",
 		"test:components": "vitest run --project components",
 		"test:core": "vitest run --project core",
+		"test:notification": "vitest run --project notification",
 		"test:watch": "vitest",
 		"typecheck": "pnpm --recursive typecheck",
 		"typecheck:app": "pnpm --filter s-private-app typecheck",
 		"typecheck:ui": "pnpm --filter @s-hirano-ist/s-ui typecheck",
 		"typecheck:core": "pnpm --filter @s-hirano-ist/s-core typecheck",
 		"typecheck:db": "pnpm --filter @s-hirano-ist/s-database typecheck",
+		"typecheck:notification": "pnpm --filter @s-hirano-ist/s-notification typecheck",
 		"license:summary": "echo '=== Root dependencies ===' > library-license.txt && license-checker-rseidelsohn --start . --summary >> library-license.txt && echo '\n=== App package ===' >> library-license.txt && license-checker-rseidelsohn --start ./app --summary >> library-license.txt && echo '\n=== UI package ===' >> library-license.txt && license-checker-rseidelsohn --start ./packages/ui --summary >> library-license.txt && echo '\n=== Core package ===' >> library-license.txt && license-checker-rseidelsohn --start ./packages/core --summary >> library-license.txt",
 		"license:check": "license-checker-rseidelsohn --start . --failOn 'GPL;GPL-2.0;GPL-3.0;LGPL;LGPL-3.0' && license-checker-rseidelsohn --start ./app --failOn 'GPL;GPL-2.0;GPL-3.0;LGPL;LGPL-3.0' && license-checker-rseidelsohn --start ./packages/ui --failOn 'GPL;GPL-2.0;GPL-3.0;LGPL;LGPL-3.0' && license-checker-rseidelsohn --start ./packages/core --failOn 'GPL;GPL-2.0;GPL-3.0;LGPL;LGPL-3.0' || (echo '\n=== ERROR: Forbidden licenses detected ===' && echo '\n=== Root package details ===' && license-checker-rseidelsohn --start . --csv && echo '\n=== App package details ===' && license-checker-rseidelsohn --start ./app --csv && echo '\n=== UI package details ===' && license-checker-rseidelsohn --start ./packages/ui --csv && echo '\n=== Core package details ===' && license-checker-rseidelsohn --start ./packages/core --csv && exit 1)",
 		"security": "pnpm audit --audit-level=moderate",
@@ -39,9 +41,9 @@
 		"knip": "knip",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build -o .storybook-static",
-		"deps:check": "depcruise app/src packages/ui packages/core --config .dependency-cruiser.cjs",
-		"deps:circular": "depcruise app/src packages/ui packages/core --config .dependency-cruiser.cjs --output-type text --focus-depth 0",
-		"deps:graph": "depcruise app/src packages/ui packages/core --config .dependency-cruiser.cjs --output-type dot | dot -T svg > dependency-graph.svg"
+		"deps:check": "depcruise app/src packages/ui packages/core packages/notification --config .dependency-cruiser.cjs",
+		"deps:circular": "depcruise app/src packages/ui packages/core packages/notification --config .dependency-cruiser.cjs --output-type text --focus-depth 0",
+		"deps:graph": "depcruise app/src packages/ui packages/core packages/notification --config .dependency-cruiser.cjs --output-type dot | dot -T svg > dependency-graph.svg"
 	},
 	"dependencies": {
 		"next": "15.5.9",
