docs: Add notification package configuration and publishing steps

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -20,6 +20,7 @@ jobs:
       core_release_created: ${{ steps.release.outputs['packages/core--release_created'] }}
       ui_release_created: ${{ steps.release.outputs['packages/ui--release_created'] }}
       database_release_created: ${{ steps.release.outputs['packages/database--release_created'] }}
+      notification_release_created: ${{ steps.release.outputs['packages/notification--release_created'] }}
     steps:
       - uses: googleapis/release-please-action@16a9c90856f42705d54a6fda1823352bdc62cf38 # v4
         id: release
@@ -71,6 +72,13 @@ jobs:
       - name: Publish @s-hirano-ist/s-database
         if: ${{ needs.release-please.outputs.database_release_created == 'true' }}
         working-directory: packages/database
+        run: pnpm publish --no-git-checks --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish @s-hirano-ist/s-notification
+        if: ${{ needs.release-please.outputs.notification_release_created == 'true' }}
+        working-directory: packages/notification
         run: pnpm publish --no-git-checks --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
