--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,6 +1,7 @@
 {
-	".": "10.2.0",
-	"packages/core": "1.2.0",
-	"packages/ui": "1.2.0",
-	"packages/database": "1.2.0"
+	".": "10.3.0",
+	"packages/core": "1.3.0",
+	"packages/ui": "1.3.0",
+	"packages/database": "1.3.0",
+	"packages/notification": "1.3.0"
 }
