--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -14,8 +14,8 @@
 		"outDir": "./dist",
 		"rootDir": "./src",
 		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "bundler",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"incremental": true
