--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@storybook/addon-a11y": "10.1.10",
 		"@storybook/addon-docs": "10.1.10",
 		"@storybook/addon-links": "10.1.10",
+		"@storybook/addon-mcp": "0.1.6",
 		"@storybook/addon-themes": "10.1.10",
 		"@storybook/addon-vitest": "10.1.10",
 		"@storybook/nextjs-vite": "10.1.10",
