--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"pnpm": "10.25.0"
 	},
 	"scripts": {
-		"dev": "pnpm --recursive dev",
+		"dev": "pnpm --recursive --parallel --stream dev",
 		"build": "pnpm --recursive build",
 		"clean": "rm -rf app/node_modules app/.next packages/*/node_modules packages/*/dist",
 		"biome:ci": "biome ci .",
