--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ packages/core/dist/
 packages/database/dist/
 packages/ui/dist/
 packages/notification/dist/
+packages/scripts/dist/
 
 # TypeDoc generated documentation
 docs/api/
