--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -20,6 +20,8 @@ COPY app/package.json ./app/package.json
 COPY packages/ui/package.json ./packages/ui/package.json
 COPY packages/database/package.json ./packages/database/package.json
 COPY packages/core/package.json ./packages/core/package.json
+COPY packages/scripts/package.json ./packages/scripts/package.json
+COPY packages/notification/package.json ./packages/notification/package.json
 
 # Install dependencies
 RUN pnpm install --frozen-lockfile
@@ -33,6 +35,8 @@ COPY --from=deps /app/packages/ui/node_modules/ ./packages/ui/node_modules/
 COPY --from=deps /app/packages/database/node_modules/ ./packages/database/node_modules/
 COPY --from=deps /app/packages/database/src/generated/ ./packages/database/src/generated/
 COPY --from=deps /app/packages/core/node_modules/ ./packages/core/node_modules/
+COPY --from=deps /app/packages/scripts/node_modules/ ./packages/scripts/node_modules/
+COPY --from=deps /app/packages/notification/node_modules/ ./packages/notification/node_modules/
 
 # Copy rest of the application code
 COPY . .
