--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@s-hirano-ist/s-database",
-	"version": "1.5.1",
+	"version": "1.5.2",
 	"description": "Prisma database schema and client for s-private project",
 	"type": "module",
 	"main": "./src/index.ts",
@@ -10,8 +10,8 @@
 			"types": "./src/index.ts",
 			"default": "./src/index.ts"
 		},
-		"./generated": "./src/generated/prisma/client.ts",
-		"./generated/*": "./src/generated/prisma/*"
+		"./generated": "./src/generated/index.js",
+		"./generated/*": "./src/generated/*"
 	},
 	"publishConfig": {
 		"access": "public",
@@ -20,8 +20,8 @@
 				"types": "./src/index.ts",
 				"default": "./src/index.ts"
 			},
-			"./generated": "./src/generated/prisma/client.ts",
-			"./generated/*": "./src/generated/prisma/*"
+			"./generated": "./src/generated/index.js",
+			"./generated/*": "./src/generated/*"
 		},
 		"main": "./src/index.ts",
 		"types": "./src/index.ts"
