chore: add prisma studio script to package.json

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"deps:check": "depcruise app/src packages/ui packages/core packages/notification --config .dependency-cruiser.cjs",
 		"deps:circular": "depcruise app/src packages/ui packages/core packages/notification --config .dependency-cruiser.cjs --output-type text --focus-depth 0",
 		"deps:graph": "depcruise app/src packages/ui packages/core packages/notification --config .dependency-cruiser.cjs --output-type dot | dot -T svg > dependency-graph.svg",
+		"prisma:studio": "pnpm --filter s-database prisma:studio",
 		"docs:build": "typedoc",
 		"docs:serve": "npx serve docs/api",
 		"docs:watch": "typedoc --watch",
