--- a/package.json
+++ b/package.json
@@ -19,17 +19,8 @@
 		"lint:fix": "eslint . --fix",
 		"lint:inspector": "config-inspector --config eslint.config.ts",
 		"test": "vitest run",
-		"test:app": "vitest run --project app",
-		"test:components": "vitest run --project components",
-		"test:core": "vitest run --project core",
-		"test:notification": "vitest run --project notification",
 		"test:watch": "vitest",
 		"typecheck": "pnpm --recursive typecheck",
-		"typecheck:app": "pnpm --filter s-private-app typecheck",
-		"typecheck:ui": "pnpm --filter @s-hirano-ist/s-ui typecheck",
-		"typecheck:core": "pnpm --filter @s-hirano-ist/s-core typecheck",
-		"typecheck:db": "pnpm --filter @s-hirano-ist/s-database typecheck",
-		"typecheck:notification": "pnpm --filter @s-hirano-ist/s-notification typecheck",
 		"license:summary": "echo '=== Root dependencies ===' > library-license.txt && license-checker-rseidelsohn --start . --summary >> library-license.txt && echo '\n=== App package ===' >> library-license.txt && license-checker-rseidelsohn --start ./app --summary >> library-license.txt && echo '\n=== UI package ===' >> library-license.txt && license-checker-rseidelsohn --start ./packages/ui --summary >> library-license.txt && echo '\n=== Core package ===' >> library-license.txt && license-checker-rseidelsohn --start ./packages/core --summary >> library-license.txt",
 		"license:check": "license-checker-rseidelsohn --start . --failOn 'GPL;GPL-2.0;GPL-3.0;LGPL;LGPL-3.0' && license-checker-rseidelsohn --start ./app --failOn 'GPL;GPL-2.0;GPL-3.0;LGPL;LGPL-3.0' && license-checker-rseidelsohn --start ./packages/ui --failOn 'GPL;GPL-2.0;GPL-3.0;LGPL;LGPL-3.0' && license-checker-rseidelsohn --start ./packages/core --failOn 'GPL;GPL-2.0;GPL-3.0;LGPL;LGPL-3.0' || (echo '\n=== ERROR: Forbidden licenses detected ===' && echo '\n=== Root package details ===' && license-checker-rseidelsohn --start . --csv && echo '\n=== App package details ===' && license-checker-rseidelsohn --start ./app --csv && echo '\n=== UI package details ===' && license-checker-rseidelsohn --start ./packages/ui --csv && echo '\n=== Core package details ===' && license-checker-rseidelsohn --start ./packages/core --csv && exit 1)",
 		"security": "pnpm audit --audit-level=moderate",
@@ -70,6 +61,7 @@
 		"@testing-library/react": "16.3.1",
 		"@testing-library/user-event": "14.6.1",
 		"@vitest/browser": "4.0.16",
+		"@vitest/browser-playwright": "4.0.16",
 		"@vitest/coverage-v8": "4.0.16",
 		"@vitest/eslint-plugin": "1.6.4",
 		"dependency-cruiser": "17.3.4",
