--- a/app/package.json
+++ b/app/package.json
@@ -22,10 +22,10 @@
 		"@tailwindcss/typography": "0.5.19",
 		"@vercel/analytics": "1.6.1",
 		"@vercel/speed-insights": "1.3.1",
+		"better-auth": "1.4.9",
 		"lucide-react": "0.562.0",
 		"minio": "8.0.6",
 		"next": "15.5.9",
-		"next-auth": "5.0.0-beta.30",
 		"next-intl": "4.6.1",
 		"next-themes": "0.4.6",
 		"pino": "10.1.0",
