refactor: image parser

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"lib": ["esnext"],
+		"types": ["node"],
 		"target": "ES2022",
 		"allowJs": true,
 		"skipLibCheck": true,
