--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -120,11 +120,11 @@
 		"directory": "packages/core"
 	},
 	"dependencies": {
-		"sharp": "0.34.5",
 		"uuid": "13.0.0",
 		"zod": "4.3.4"
 	},
 	"devDependencies": {
+		"@types/node": "24.10.4",
 		"typescript": "5.9.3"
 	}
 }
