chore: enable automerge for lockfile maintenance

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -30,6 +30,7 @@
   rangeStrategy: 'bump',
   lockFileMaintenance: {
     enabled: true,
+    automerge: true,
   },
   vulnerabilityAlerts: {
     labels: [
