--- a/.github/workflows/update-reports.yaml
+++ b/.github/workflows/update-reports.yaml
@@ -55,3 +55,4 @@ jobs:
             This is an update PR of auto generated reports:
             - License summary (library-license.txt)
             - Code duplication analysis (jscpd-summary.txt)
+          reviewers: "s-hirano-ist"
