--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"dev": "pnpm --recursive --parallel --stream dev",
 		"build": "pnpm --recursive build",
 		"clean": "rm -rf app/node_modules app/.next packages/*/node_modules packages/*/dist",
-		"biome:ci": "biome ci .",
-		"biome:fix": "biome check --write .",
+		"check:ci": "biome ci .",
+		"check:fix": "biome check --write .",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"lint:inspector": "config-inspector --config eslint.config.js",
